--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
             <!-- Botón Trabajá con nosotros -->
             <div class="mt-4">
-                <a href="https://wa.me/5492344401169?text=👋%20Hola!%20Quisiera%20postularme%20para%20trabajar%20en%20la%20cafetería.%20¿Podrían%20contarme%20cómo%20enviar%20mi%20CV%20o%20más%20información?%20🙌"
+                <a href="work.html"
                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
                     📩 Trabajá con nosotros
                 </a>
