--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
-                    <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
+                    <a href="franquicia.html" class="nav-item nav-link">Franquicias</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
@@ -140,6 +140,14 @@
                         📩 Trabajá con nosotros
                     </a>
                 </div>
+
+                <div class="mt-4">
+                    <a href="franquicia.html"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Franquicias
+                    </a>
+                </div>
+
             </div>
  
         </div>
