--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
-                    <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
+                    <a href="franquicia.html" class="nav-item nav-link">Franquicias</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
@@ -310,13 +310,20 @@
                 <p>8.00 - 20.00</p>
             </div>
 
-            <!-- Botón Trabajá con nosotros -->
-            <div class="mt-4">
-                <a href="work.html"
-                   class="btn btn-primary btn-block font-weight-bold py-2 w-50">
-                    📩 Trabajá con nosotros
-                </a>
-            </div>
+                <!-- Botón Trabajá con nosotros -->
+                <div class="mt-4">
+                    <a href="work.html"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Trabajá con nosotros
+                    </a>
+                </div>
+
+                <div class="mt-4">
+                    <a href="franquicia.html"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Franquicias
+                    </a>
+                </div>
         </div>
     </div>
     <div class="container-fluid text-center text-white border-top mt-4 py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
