--- a/service.html
+++ b/service.html
@@ -45,7 +45,7 @@
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
-                    <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
+                    <a href="franquicia.html" class="nav-item nav-link">Franquicias</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
@@ -153,6 +153,17 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-6 mb-5">
+                    <div class="row align-items-center">
+                        <div class="col-sm-5">
+                            <img class="img-fluid mb-3 mb-sm-0" src="img/cheese_cake.jpg" alt=""  style="height: 200px; width: 200px; object-fit: cover;">
+                        </div>
+                        <div class="col-sm-7">
+                            <h4><i class="#"></i>Cheese Cake</h4>
+                            <p class="m-0">Base crocante de galletitas, relleno cremoso horneado y topping de frutos rojos. Delicada, fresca y tentadora.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -193,11 +204,12 @@
                 </div>
 
                 <div class="mt-4">
-                    <a href="work.html"
+                    <a href="franquicia.html"
                     class="btn btn-primary btn-block font-weight-bold py-2 w-50">
                         📩 Franquicias
                     </a>
                 </div>
+
             </div>
  
         </div>
