--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
-                    <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
+                    <a href="franquicia.html" class="nav-item nav-link">Franquicias</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
@@ -77,16 +77,44 @@
     <div class="row">
         <div class="col-md-8 offset-md-2">
             <form action="enviar-cv.php" method="POST" enctype="multipart/form-data">
-                <input type="text" name="nombre" placeholder="Nombre y apellido" required>
-                <input type="email" name="email" placeholder="Email" required>
-                <input type="tel" name="telefono" placeholder="Teléfono" required>
-                <input type="text" name="localidad" placeholder="Localidad" required>
-                <input type="date" name="nacimiento" required>
-                <input type="file" name="cv" accept=".pdf" required>
-                <button type="submit">Enviar</button>
+                
+                <div class="control-group mb-3">
+                    <label for="nombre" class="font-weight-bold mb-1">Nombre y apellido</label>
+                    <input type="text" class="form-control bg-transparent p-4" name="nombre" id="nombre" required>
+                </div>
+
+                <div class="control-group mb-3">
+                    <label for="email" class="font-weight-bold mb-1">Email</label>
+                    <input type="email" class="form-control bg-transparent p-4" name="email" id="email" required>
+                </div>
+
+                <div class="control-group mb-3">
+                    <label for="telefono" class="font-weight-bold mb-1">Teléfono</label>
+                    <input type="tel" class="form-control bg-transparent p-4" name="telefono" id="telefono" required>
+                </div>
+
+                <div class="control-group mb-3">
+                    <label for="localidad" class="font-weight-bold mb-1">Localidad</label>
+                    <input type="text" class="form-control bg-transparent p-4" name="localidad" id="localidad" required>
+                </div>
+
+                <div class="control-group mb-3">
+                    <label for="nacimiento" class="font-weight-bold mb-1">Fecha de nacimiento</label>
+                    <input type="date" class="form-control bg-transparent p-4" name="nacimiento" id="nacimiento" required>
+                </div>
+
+                <div class="control-group mb-4">
+                    <label for="cv" class="font-weight-bold mb-1">Cargar CV (PDF)</label>
+                    <input type="file" class="form-control bg-transparent p-4" name="cv" id="cv" accept=".pdf" required>
+                </div>
+
+                <div>
+                    <button type="submit" class="btn btn-primary font-weight-bold py-3 px-5">Enviar</button>
+                </div>
             </form>
         </div>
     </div>
+
 </div>
 
 
@@ -123,6 +151,14 @@
                         📩 Trabajá con nosotros
                     </a>
                 </div>
+
+                <div class="mt-4">
+                    <a href="franquicia.html"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Franquicias
+                    </a>
+                </div>
+
             </div>
  
         </div>
