--- a/menu.html
+++ b/menu.html
@@ -45,7 +45,7 @@
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
                     <a href="service.html" class="nav-item nav-link">Productos</a>
-                    <!-- <a href="menu.html" class="nav-item nav-link">Menu</a> -->
+                    <a href="franquicia.html" class="nav-item nav-link">Franquicias</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                 </div>
             </div>
@@ -171,6 +171,21 @@
                 <div>
                     <h6 class="text-white text-uppercase">Lunes - Domingo</h6>
                     <p>8.00 - 20.00</p>
+                </div>
+
+                <!-- Botón Trabajá con nosotros -->
+                <div class="mt-4">
+                    <a href="work.html"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Trabajá con nosotros
+                    </a>
+                </div>
+
+                <div class="mt-4">
+                    <a href="franquicia.html"
+                    class="btn btn-primary btn-block font-weight-bold py-2 w-50">
+                        📩 Franquicias
+                    </a>
                 </div>
 
                 <!-- Botón Trabajá con nosotros -->
