--- a/work.html
+++ b/work.html
@@ -35,7 +35,7 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">I love Palermo</h1>
+                <img src="img/logo_corto_transparente.png" alt="Image" style="height: 60px; width: 60px; ">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -105,7 +105,7 @@
 
                 <div class="control-group mb-4">
                     <label for="cv" class="font-weight-bold mb-1">Cargar CV (PDF)</label>
-                    <input type="file" class="form-control bg-transparent p-4" name="cv" id="cv" accept=".pdf" required>
+                    <input type="file" class="form-control bg-transparent p-4" name="cv" id="cv" accept=".pdf" required style="height:110%;">
                 </div>
 
                 <div>
