--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <h1 class="m-0 display-4 text-uppercase text-white">I love Palermo</h1>
+                <img src="img/logo_corto_transparente.png" alt="Image" style="height: 60px; width: 60px; ">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -97,7 +97,17 @@
                     <iframe style="width: 100%; height: 443px;"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.6852257722003!2d-58.4208255!3d-34.5868305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb5004b937ac3%3A0x778f11ac1b936675!2sI%20Love%20Palermo%20Specialty%20Coffee!5e0!3m2!1ses!2sar!4v1748802816907!5m2!1ses!2sar"
                         frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+                    <!-- Medios de transporte -->
+                    <div class="mt-4">
+                        <h5 class="text-primary font-weight-bold">🚇 Medios de transporte cercanos:</h5>
+                        <p class="mb-0">
+                            Subte D (Estación Palermo) <br>
+                            Colectivos: 15, 12, 39, 68 y más.
+                        </p>
+                    </div>
                 </div>
+
                 <div class="col-md-6 pb-5">
                     <div class="contact-form">
                         <div id="success"></div>
