--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
             <a href="index.html" class="navbar-brand px-lg-4 m-0">
-                <img src="img/ChatGPT Image 3 jul 2025, 20_30_07.png" alt="Image" style="height: 60px; width: 60px; ">
+                <img src="img/logo_corto_transparente.png" alt="Image" style="height: 60px; width: 60px; ">
 
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -61,17 +61,17 @@
                 <div class="carousel-item active">
                     <img class="w-100" src="img/carousel-1.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
-                        <h1 class="display-1 text-white m-0">COFFEE</h1>
-                        <h2 class="text-white m-0">* SINCE 1950 *</h2>
+                        <h2 class="text-primary font-weight-medium m-0">Ofreciendo más que una merienda</h2>
+                        <h1 class="display-1 text-white m-0">I Love Palermo</h1>
+                        <!-- <h2 class="text-white m-0">* SINCE 1950 *</h2> -->
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img class="w-100" src="img/carousel-2.jpg" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                        <h2 class="text-primary font-weight-medium m-0">We Have Been Serving</h2>
-                        <h1 class="display-1 text-white m-0">COFFEE</h1>
-                        <h2 class="text-white m-0">* SINCE 1950 *</h2>
+                        <h2 class="text-primary font-weight-medium m-0">Café de especialidad y pastelería</h2>
+                        <h1 class="display-1 text-white m-0">Conocenos</h1>
+                        <!-- <h2 class="text-white m-0">* SINCE 1950 *</h2> -->
                     </div>
                 </div>
             </div>
