--- a/franquicia.html
+++ b/franquicia.html
@@ -28,9 +28,11 @@
 
 <body>
     <!-- Botón de WhatsApp -->
-<a href="https://wa.me/5491166205844" target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
+<a href="https://wa.me/5491166205844?text=Hola%2C%20quisiera%20saber%20un%20poco%20m%C3%A1s%20sobre%20I%20Love%20Palermo"
+   target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
 </a>
+
 <!-- Navbar Start -->
     <div class="container-fluid p-0 nav-bar">
         <nav class="navbar navbar-expand-lg bg-none navbar-dark py-3">
