--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
 
 <body>
     <!-- Botón de WhatsApp -->
-<a href="https://wa.me/5491166205844?text=Hola%2C%20quisiera%20saber%20un%20poco%20m%C3%A1s%20sobre%20I%20Love%20Palermo"
+<a href="https://wa.me/5492344401169‬?text=Hola%2C%20quisiera%20saber%20un%20poco%20m%C3%A1s%20sobre%20I%20Love%20Palermo"
    target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
 </a>
@@ -169,7 +169,7 @@
             </div>
             <div class="row">
                 <div class="col-12 d-flex justify-content-center mt-4">
-                    <a href="https://wa.me/5491166205844?text=Hola%2C%20%C2%BFc%C3%B3mo%20est%C3%A1n%3F%20Quisiera%20encargar%20la%20torta..."
+                    <a href="https://wa.me/5492344401169‬?text=Hola%2C%20%C2%BFc%C3%B3mo%20est%C3%A1n%3F%20Quisiera%20encargar%20la%20torta..."
                     class="btn btn-primary font-weight-bold py-3 px-5" target="_blank" aria-label="Encargar por WhatsApp">
                         📦Encargar
                     </a>
