--- a/service.html
+++ b/service.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>KOPPEE - Coffee Shop HTML Template</title>
+    <title>I Love Palermo - Productos</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free Website Template" name="keywords">
     <meta content="Free Website Template" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo_corto_transparente.png" rel="icon">
 
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -60,10 +60,15 @@
     <div class="container-fluid page-header mb-5 position-relative overlay-bottom">
         <div class="d-flex flex-column align-items-center justify-content-center pt-0 pt-lg-5" style="min-height: 400px">
             <h1 class="display-4 mb-3 mt-0 mt-lg-5 text-white text-uppercase">Productos</h1>
-            <div class="d-inline-flex mb-lg-5">
+            <div class="d-inline-flex mb-3">
                 <p class="m-0 text-white"><a class="text-white" href="">Inicio</a></p>
                 <p class="m-0 text-white px-2">/</p>
                 <p class="m-0 text-white">Productos</p>
+            </div>
+            <div>
+                <p class="m-0 text-white small">Tortas enteras para compartir, festejar o darte un gran gusto.</p>
+                <p class="m-0 text-white small">¿Una porción? Mejor toda. Elegí tu torta entera hoy.</p>
+                <p class="m-0 text-white small">Perfectas para cumpleaños, antojos o simplemente porque sí.</p>
             </div>
         </div>
     </div>
