--- a/service.html
+++ b/service.html
@@ -28,7 +28,7 @@
 
 <body>
     <!-- Botón de WhatsApp -->
-<a href="https://wa.me/5492344401169‬?text=Hola%2C%20quisiera%20saber%20un%20poco%20m%C3%A1s%20sobre%20I%20Love%20Palermo"
+<a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustaria%20encargar%20una%20torta%20🎂"
    target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
 </a>
@@ -66,9 +66,7 @@
                 <p class="m-0 text-white">Productos</p>
             </div>
             <div>
-                <p class="m-0 text-white small">Tortas enteras para compartir, festejar o darte un gran gusto.</p>
                 <p class="m-0 text-white small">¿Una porción? Mejor toda. Elegí tu torta entera hoy.</p>
-                <p class="m-0 text-white small">Perfectas para cumpleaños, antojos o simplemente porque sí.</p>
             </div>
         </div>
     </div>
@@ -91,6 +89,10 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Bomb Cake</h4>
                             <p class="m-0">Base de brownie, relleno de chocotorta, Oreo, Kinder, dulce de leche y crema. Una bomba irresistible.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -102,6 +104,10 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Carrot Cake</h4>
                             <p class="m-0">Torta de zanahoria con nueces, especias suaves y cobertura de cream cheese.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -113,6 +119,10 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Chocotorta FRANUI</h4>
                             <p class="m-0">La clásica de toda la vida, con un plus de Franui arriba. Cremosa, fresca y golosa.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -124,6 +134,10 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Matilda</h4>
                             <p class="m-0">Súper húmeda y chocolatosa. Con mucho cacao, ganache y espíritu goloso. La favorita de todos.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -135,6 +149,10 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Tentación FRANUI</h4>
                             <p class="m-0">Masa crujiente de vainilla, reducción de frutos rojos, doble ganache (blanco y negro) y Franouilles. Dulce, fresca y gourmet.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -146,6 +164,10 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Torta Oreo</h4>
                             <p class="m-0">Rellena de chocotorta bien cremosa con galletitas Oreo. Crocante, dulce y nostálgica.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -157,6 +179,10 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Red Velvet</h4>
                             <p class="m-0">Clásica, húmeda y esponjosa, con suaves capas rojo intenso y un cremoso frosting de queso.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -168,16 +194,12 @@
                         <div class="col-sm-7">
                             <h4><i class="#"></i>Cheese Cake</h4>
                             <p class="m-0">Base crocante de galletitas, relleno cremoso horneado y topping de frutos rojos. Delicada, fresca y tentadora.</p>
+                            <a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustar%C3%ADa%20encargar%20una%20Bomb%20Cake%20🎂"
+                            class="btn btn-primary font-weight-bold mt-3 py-2 px-4" target="_blank">
+                            📦 Encargar
+                            </a>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center mt-4">
-                    <a href="https://wa.me/5492344401169‬?text=Hola%2C%20%C2%BFc%C3%B3mo%20est%C3%A1n%3F%20Quisiera%20encargar%20la%20torta..."
-                    class="btn btn-primary font-weight-bold py-3 px-5" target="_blank" aria-label="Encargar por WhatsApp">
-                        📦Encargar
-                    </a>
                 </div>
             </div>
         </div>
