--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
 
 <body>
     <!-- Botón de WhatsApp -->
-<a href="https://wa.me/5492344401169‬?text=Hola%2C%20quisiera%20saber%20un%20poco%20m%C3%A1s%20sobre%20I%20Love%20Palermo"
+<a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustaria%20encargar%20una%20torta%20🎂"
    target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
 </a>
@@ -223,6 +223,36 @@
         });
     });
     </script>
+
+
+<!-- Modal Confirmación CV -->
+<div class="modal fade" id="modalCV" tabindex="-1" role="dialog" aria-labelledby="modalCVLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content text-center">
+      <div class="modal-header bg-success text-white">
+        <h5 class="modal-title w-100" id="modalCVLabel">✅ ¡Gracias por postularte!</h5>
+      </div>
+      <div class="modal-body">
+        Recibimos tu CV correctamente. Te contactaremos si tu perfil se ajusta a nuestras búsquedas.
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<script>
+  const urlParams = new URLSearchParams(window.location.search);
+  if (urlParams.get('enviado') === '1') {
+      $(document).ready(function() {
+          $('#modalCV').modal('show');
+          // Limpiar la URL para evitar mostrar el modal al refrescar
+          window.history.replaceState({}, document.title, window.location.pathname);
+      });
+  }
+</script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
