--- a/franquicia.html
+++ b/franquicia.html
@@ -28,7 +28,7 @@
 
 <body>
     <!-- Botón de WhatsApp -->
-<a href="https://wa.me/5492344401169‬?text=Hola%2C%20quisiera%20saber%20un%20poco%20m%C3%A1s%20sobre%20I%20Love%20Palermo"
+<a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustaria%20encargar%20una%20torta%20🎂"
    target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
 </a>
@@ -191,6 +191,40 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+
+    <!-- Modal de Confirmación -->
+<div class="modal fade" id="modalConfirmacion" tabindex="-1" role="dialog" aria-labelledby="modalConfirmacionLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content text-center">
+      <div class="modal-header bg-success text-white">
+        <h5 class="modal-title w-100" id="modalConfirmacionLabel">✅ ¡Gracias!</h5>
+      </div>
+      <div class="modal-body">
+        Tu solicitud fue enviada correctamente. Nos pondremos en contacto pronto.
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button type="button" class="btn btn-success" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS (asegurate de tenerlo cargado) -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+  // Mostrar modal si existe el parámetro "enviado=1"
+  const urlParams = new URLSearchParams(window.location.search);
+  if (urlParams.get('enviado') === '1') {
+      $(document).ready(function() {
+          $('#modalConfirmacion').modal('show');
+          // Limpiar URL después de mostrarlo
+          window.history.replaceState({}, document.title, window.location.pathname);
+      });
+  }
+</script>
 
 
 </body>
