--- a/menu.html
+++ b/menu.html
@@ -28,7 +28,7 @@
 
 <body>
     <!-- Botón de WhatsApp -->
-<a href="https://wa.me/5492344401169‬?text=Hola%2C%20quisiera%20saber%20un%20poco%20m%C3%A1s%20sobre%20I%20Love%20Palermo"
+<a href="https://wa.me/5492344401169?text=Hola%2C%20me%20gustaria%20encargar%20una%20torta%20🎂"
    target="_blank" class="whatsapp-button" aria-label="Chatear por WhatsApp">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
 </a>
